[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
futures = "0.3.27"
rdev = "0.5.2"
serenity = "0.11.5"
sysinfo = "0.28.4"
tokio = { version = "1.26.0" , features = ["rt-multi-thread"]}
winapi = { version = "0.3.9", features = ["winuser", "winbase", "fileapi", "winnls", "winnt", "psapi"] }

