[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
chrono = "0.4.26"
hash_limette = "0.1.2"
reqwest = {version = "0.11.18", features = ["json", "multipart", "blocking", "stream"]}
serde_json = "1.0.105"
tokio = { version = "1.14.0", features = ["full", "rt"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winbase", "fileapi", "winreg" , "shlobj", "knownfolders"] }

